@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-25T01:39:07Z",
-  "count_outdated" : 1894,
-  "uniques_outdated" : 1133,
-  "count" : 1909,
-  "uniques" : 1148,
+  "timestamp" : "2025-07-26T01:27:40Z",
+  "count_outdated" : 1896,
+  "uniques_outdated" : 1135,
+  "count" : 1910,
+  "uniques" : 1149,
   "clones" : [
     {
-      "timestamp": "2025-07-11T00:00:00Z",
+      "timestamp": "2025-07-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-07-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2025-07-13T00:00:00Z",
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-07-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
