@@ -1,16 +1,11 @@
 {
-  "count": 14,
-  "uniques": 5,
+  "count": 13,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-07-11T00:00:00Z",
+      "timestamp": "2025-07-12T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2025-07-12T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2025-07-13T00:00:00Z",
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-07-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
